@@ -10,7 +10,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +24,7 @@ public class CreateTestTemplateUseCaseImpl implements CreateTestTemplateUseCase 
                 .description(request.getDescription())
                 .exercises(request.getExercises().stream()
                         .map(this::toExerciseDomain)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .createdAt(LocalDateTime.now())
                 .build();
 
@@ -52,7 +51,7 @@ public class CreateTestTemplateUseCaseImpl implements CreateTestTemplateUseCase 
                                 .unit(e.getUnit())
                                 .greaterIsBetter(e.getGreaterIsBetter())
                                 .build())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .createdAt(domain.getCreatedAt())
                 .build();
     }
